modify by maze 2018-07-14 description:  添加docker脚本

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,12 +1,48 @@
 # 配置文件地址: supervisord -c /usr/local/etc/supervisord.ini
+
+#来源
+# input {
+#     stdin{
+#         add_field => {"key" =>"value"}
+#         codec => "plain"
+#         tags => ["add"]
+#         type => "std"
+#     }
+# }
+
+# shipper 通过redis做broker 实现线性扩展
 input {
-    stdin{
-        add_field => {"key" =>"value"}
+    redis {
+        data_type => "pattern_channel"
+        key => "logstash-*"
+        host => "127.0.0.1"
+        port => 6379
+        threads => 1
         codec => "plain"
-        tags => ["add"]
-        type => "std"
     }
 }
+
+
+# 过滤掉5天前的数据
+# filter {
+#     date {
+
+#         match => ["datetime","UNIX"]
+#     }
+#     ruby {
+#         code => "event.cancel if 5 * 24 * 3600 < (event.get('@timestamp')-:: Time.now).abs"
+#     }
+# }
+
+# 分割过滤器
+# filter {
+#     split {
+#         field => "message"
+#         terminator => "#"
+#     }
+# }
+
+# 输出器
 output {
     stdout {
         codec => rubydebug {}
@@ -15,3 +51,12 @@ output {
         index => "logstash-1"
     }
 }
+
+# udp {
+#     port => 52347
+#     buffer_size => 1452
+#     workers => 3
+#     queue_size => 30000
+#     codec => collectd { }
+#     type => "collectd"
+# }
