modify by maze 2018-10-29 description: 提交docker的redis集群编排脚本

--- a/logstash/prod/logstash.conf
+++ b/logstash/prod/logstash.conf
@@ -10,21 +10,21 @@ filter {
     grok {
         match => { "message" => "%{TIMESTAMP_ISO8601:timestamp}+%{LOGLEVEL:severity}+[%{DATA:service},%{DATA:trace},%{DATA:span},%{DATA:exportable}]+%{DATA:pid}---+[%{DATA:thread}]+%{DATA:class}+:+%{GREEDYDATA:content}" }
     }
-    ruby {
-       code => "event.set('timestamp', event.get('@timestamp').time.localtime + 8*60*60)"
-    }
-    ruby {
-      code => "event.set('@timestamp',event.get('timestamp'))"
-    }
-    mutate {
-      remove_field => ["timestamp"]
-    }
+    # ruby {
+    #    code => "event.set('timestamp', event.get('@timestamp').time.localtime + 8*60*60)"
+    # }
+    # ruby {
+    #   code => "event.set('@timestamp',event.get('timestamp'))"
+    # }
+    # mutate {
+    #   remove_field => ["timestamp"]
+    # }
 }
 
 output {
-    stdout{
-        codec=>rubydebug{}
-    }
+    # stdout{
+    #     codec=>rubydebug{}
+    # }
     elasticsearch {
         hosts => "localhost:9200"
     }
